fixed style overflow

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -8,14 +8,13 @@
     @apply m-0;
     @apply p-0;
     @apply box-border;
-    @apply overflow-x-hidden;
     @apply h-full;
+    @apply w-full;
   }
 
   html {
-    @apply h-full;
-    @apply overflow-x-hidden;
-    overscroll-behavior: contain;
+    @apply h-screen;
+    @apply w-full;
     @apply font-roboto;
   }
 
@@ -29,12 +28,16 @@
   }
 
   #root {
-    height: 100%;
     display: flex;
-    flex-direction: column;
+    height: 100%;
   }
 
-  app-page {
+  /* app-page {
     flex-grow: 1;
+  } */
+
+  app-layout {
+    flex-grow: 1;
+    overflow: auto;
   }
 }
